--- a/static/style/style.css
+++ b/static/style/style.css
@@ -28,7 +28,8 @@
   --fs-800: Clamp(0.94rem, calc(0.92rem + 0.03vw));
   --fs-900: Clamp(0.94rem, calc(0.92rem + 0.02vw));
 
-  --primary-color:#2c3e50;
+  --primary-color:hsl(353, 69%, 43%);
+  /* --primary-color:#2c3e50; */
   --clr-primary-700:hsl(200, 89%, 15%);
   --clr-primary-600:hsl(200, 89%, 20%);
   --clr-primary-500:hsl(200, 89%, 35%);
@@ -36,7 +37,8 @@
   --clr-primary-300:hsl(200, 89%, 67%);
   --clr-primary-200:hsl(200, 89%, 80%);
 
-  --secondary-color:#955656;
+  --secondary-color:hsl(228, 57%, 0%);
+  /* --secondary-color:#955656; */
   /* --secondary-color:#384849; */
   --clr-secondary-700:hsl(144, 62%, 5%);
   --clr-secondary-600:hsl(114, 65%, 15%);
@@ -45,7 +47,8 @@
   --clr-secondary-300:hsl(114, 35%, 45%);
   --clr-secondary-200:hsl(114, 25%, 55%);
 
-  --accent-color: #f39c12;
+  --accent-color:hsl(32, 98%, 50%);
+  /* --accent-color: #f39c12; */
   --clr-accent-700:hsl(49, 75%, 54%);
   --clr-accent-600:hsl(33, 75%, 47%);
   --clr-accent-500:hsl(33, 75%, 40%);
@@ -53,7 +56,8 @@
   --clr-accent-300:hsl(33, 75%, 30%);
   --clr-accent-200:hsl(33, 75%, 25%);
 
-  --neutral-color: #ecf0f1;
+  --accent-color:hsl(28, 81%, 90%);
+  /* --neutral-color: #ecf0f1; */
   --clr-neutral-700:hsl(182, 75%, 35%);
   --clr-neutral-600:hsl(182, 75%, 45%);
   --clr-neutral-500:hsl(182, 75%, 55%);
@@ -88,7 +92,7 @@ body {
   text-size-adjust: var(--fs-500);
   color: var(--clr-text-200);
   text-decoration: none;
-  background-color: var(--clr-primary-600);
+  background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -102,7 +106,7 @@ header, main, footer {
 }
 
 header {
-    background-color: var(--clr-primary-500);
+  background: linear-gradient(135deg, var(--primary-color), var(--secondary-color), var(--clr-neutral-400), var(--clr-accent-500));
     color: #cfa77a;
     padding: 1rem 0;
     position: fixed;
@@ -145,6 +149,7 @@ header {
 }
 
 nav {
+    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
     display: flex;
     align-items: center;
     border-radius: 8px;
@@ -248,8 +253,6 @@ nav a:hover {
   font-size: 1.5rem;
 }
 
-
-
 .about {
   width: 80%;
   margin: 0 auto;
@@ -267,15 +270,18 @@ h2 {
   from {
     opacity: 0;
     transform: translateX(-100px);
-    /* clip-path: inset(100% 100% 0 0) */
   }
   to {
     opacity: 1;
     transform: translateX(0px);
-    /* clip-path: inset(0 0 0 0) */
   }
 }
 
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 .cards {
   list-style-type: none;
   padding: 0;
@@ -292,22 +298,17 @@ h2 {
   display: block;
   background: #f5f5f5;
   border-radius: 12px;
+  width: calc(33.333% - 20px);
+  padding: 15px;
   overflow: hidden;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.7s ease;
   animation: appear 1s linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
 }
 
-/* .card__container {
-  animation: appear 5s linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
-  display: grid;
-  row-gap: 3.5rem;
-} */
 
 .card:hover {
   transform: scale(1.05);
@@ -316,6 +317,11 @@ h2 {
 .card-image {
   width: 100%;
   height: auto;
+  border-radius: 5px;
+}
+
+.card h4 {
+  margin-top: 10px;
 }
 
 .card-details {
@@ -370,70 +376,17 @@ h2 {
   background-color: #004494;
 }
 
-
-.team-members {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-.team-member-card {
-  background: #34495e;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  width: 300px;
-  margin: 20px;
-  transition: transform 0.3s ease;
-  color: #ecf0f1;
-}
-
-.team-member-card:hover {
-  transform: scale(1.05);
-}
-
-.member-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.member-info {
-  padding: 15px;
-  background-color: #2c3e50;
-}
-
-.member-info h3 {
-  margin: 0 0 10px;
-  font-size: 1.5em;
-}
-
-.member-info p {
-  font-size: 0.9em;
-  color: #bdc3c7;
-}
-
-.member-info a {
-  text-decoration: none;
-  color: #1abc9c;
-}
-
-.member-info a:hover {
-  text-decoration: underline;
-}
-
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
+  gap: .5rem;
   margin: 4rem 5vw;
   padding: 0;
   list-style-type: none;
 }
 
 .card {
-  animation: appear 5s linear;
+  animation: appear 1s linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
   position: relative;
@@ -469,7 +422,7 @@ h2 {
   position: relative;
   display: flex;
   align-items: center;
-  gap: 2em;
+  gap: .4em;
   padding: 2em;
   border-radius: calc(40*1px) 0 0 0;
   background-color: #3f7ca8;
@@ -523,10 +476,23 @@ h2 {
   overflow: hidden;
 }
 
+.suggestions {
+  border: 1px solid #ddd;
+  max-height: 150px;
+  overflow-y: auto;
+}
+.suggestion-item {
+  padding: 8px;
+  cursor: pointer;
+}
+.suggestion-item:hover {
+  background-color: #f0f0f0;
+}
+
 footer {
   position: fixed;
   bottom: 0;
-  background-color: var(--primary-color);
+  background: linear-gradient(135deg, var(--primary-color), var(--secondary-color), var(--clr-neutral-400), var(--clr-accent-500));
   color: var(--neutral-color);
   text-align: center;
   display: flex; 
