--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> -->
     <link rel="stylesheet" href="/static/style/about.css">
     <title>About Us</title>
 </head>
@@ -18,9 +17,9 @@
           </div>
             <h1>About Us</h1>
             <nav>
-                <a href="/">Home</a>
-                <a href="/artists">Artists</a>
-                <a href="/concerts">Concerts</a>
+                <a href="/" action="/" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-home"></i>Home</a>
+                <a href="/artists" action="/artists" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-headset"></i>Artists</a>
+                <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a>
             </nav>
         </div>
         
@@ -29,7 +28,7 @@
       <div class="container">
         <div class="card__container">
           <article id="cynthia" class="card__article">
-            <img src="/static/images/kenny-eliason-5afenxnLDjs-unsplash.jpg" alt="image" class="card__img">
+            <img src="/static/images/DSC_7067.jpg" alt="image" class="card__img">
             <div class="card__data">
               <span class="card__description">Cynthia</span>
               <h2 class="card__title">The Great Developer</h2>
@@ -38,7 +37,7 @@
           </article>
     
           <article id="john-paul" class="card__article">
-            <img src="/static/images/3" alt="image" class="card__img">
+            <img src="/static/images/cache_m_GSI-07310.jpg" alt="image" class="card__img">
             <div class="card__data">
               <span class="card__description">John Paul</span>
               <h2 class="card__title">Backend Developer</h2>
@@ -47,7 +46,7 @@
           </article>
     
           <article id="joel" class="card__article">
-            <img src="/static/images/" alt="image" class="card__img">
+            <img src="/static/images/cache_m_IMG-20240318-WA0002.jpg" alt="image" class="card__img">
             <div class="card__data">
               <span class="card__description">Joel</span>
               <h2 class="card__title">Frontend Nation</h2>
@@ -62,19 +61,25 @@
       <div id="cynthia-details" class="about-card">
         <!-- Cynthia's detailed info here -->
         <h3>Cynthia</h3>
-        <p>Cynthia is an apprentice software developer with a knack for creating engaging web applications...</p>
+        <p>Cynthia is an apprentice software developer with a knack for creating engaging web applications.</p>
+        <p>Her UI/UX design skills in creating intuitive and visually appealing user experiences are unmatched.</p>
+        <p>Her expertise ensures that our website is not only functional but also user-friendly.</p>
       </div>
     
       <div id="john-paul-details" class="about-card">
         <!-- John Paul's detailed info here -->
         <h3>John Paul</h3>
-        <p>John Paul is an apprentice software developer whose backend skills in building scalable and efficient server-side solutions...</p>
+        <p>John Paul is an apprentice software developer whose backend skills in building scalable and efficient server-side solutions.</p>
+        <p>His backend development skills in building scalable and efficient server-side solutions are unmatched.</p>
+        <p>His skills ensures a smooth performance and reliable browsing experiences.</p>
       </div>
     
       <div id="joel-details" class="about-card">
         <!-- Joel's detailed info here -->
         <h3>Joel</h3>
-        <p>Joel is an apprentice software developer with expertise in frontend development and a passion for clean design...</p>
+        <p>Joel is an apprentice software developer with expertise in frontend development and a passion for clean design.</p>
+        <p>His enthusiasm for creating engaging web applications has been incorporated into this website; from visuals to smoothness, all-round engagement to unfathomable user experience.</p>
+        <p>His expertise in frontend development and passion for clean design have been instrumental in shaping this project.</p>
       </div>
     </section>
     
@@ -88,20 +93,20 @@
 </html>
 <script>
   document.querySelectorAll('.card__button').forEach(button => {
-    button.addEventListener('click', function(event) {
-      event.preventDefault();
-      const targetId = this.getAttribute('href').substring(1);
-      const targetElement = document.getElementById(targetId);
+      button.addEventListener('click', function(event) {
+          event.preventDefault();
+          const targetId = this.getAttribute('href').substring(1);
+          const targetElement = document.getElementById(targetId);
 
-      document.querySelectorAll('.about-card').forEach(card => {
-        card.style.display = 'none';
+          document.querySelectorAll('.about-card').forEach(card => {
+              card.style.display = 'none';
+          });
+
+          if (targetElement) {
+              targetElement.style.display = 'block';
+              targetElement.scrollIntoView({ behavior: 'smooth' });
+          }
       });
-
-      if (targetElement) {
-        targetElement.style.display = 'block';
-        targetElement.scrollIntoView({ behavior: 'smooth' });
-      }
-    });
   });
 </script>
 
