--- a/templates/band.html
+++ b/templates/band.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h3 style="color: white;">About {{.Band.Artist.Name}}</h3>
+    <section class="home" id="home">
+        <div class="home_content">
+            <h1>Welcome to the <span>{{.Band.Artist.Name}}</span> Experience</h1>
+            <h3 class="text_animation">Our first Album was produced in {{.Band.Artist.FirstAlbum}}</h3>
+        </div>
+        <div class="home_image">
+            <img src="{{.Band.Artist.Image}}" alt="">
+        </div>
+    </section>
     <!-- Members -->
     <div class="members">
         
@@ -16,7 +25,7 @@
             {{range $index, $mem := .Band.Artist.Members}}
             <div class="list">
                 <div class="rank"><span>{{$index}}</span></div>
-                <div class="one-member">
+                <div class="one_member">
                     <h4>{{$mem}}</h4>
                     <p>Joined the band in {{$.Band.Artist.CreationDate}}</p>
                 </div>
@@ -26,22 +35,34 @@
         
     </div>
     <h3 style="color: white;">Venues</h3>
-    {{range $loc := .Band.Location.Location}}
-       <p style="color: white;">{{$loc}}</p>
-    {{end}}
+    <div class="members">
+        
+        <div class="member-container">
+            <h3>{{.Band.Artist.Name}} Venues</h3>
+            {{range $i, $loc := .Band.Location.Location}}
+            <div class="list">
+                <div class="rank"><span>{{$i}}</span></div>
+                <div class="one_member">
+                    <h4>{{$loc}}</h4>
+                </div>
+            </div>
+            {{end}}
+        </div>
+        
+    </div>
     <!-- Locations -->
     <h3 style="color: white;">Relation</h3>
     <div class="timeline">
-        {{range $loc, $dates := .Band.Relation.DateLocs}}        
-            <div class="timeline-container left-box">
-                <img src="{{$.Band.Artist.Image}}" alt="Band logo">
-                <div class="text-box">
-                    <h2 style="color: black;">Venue: {{$loc}}</h2>
-                    <h3>Dates:</h3>
-                    {{range $dates}}
-                        <p>{{.}}</p>
-                    {{end}}
+        {{range $loc, $dates := .Band.Relation.DateLocs}}
+            {{range $date := $dates}}       
+                <div class="timeline-container left-box">
+                    <img src="{{$.Band.Artist.Image}}" alt="Band logo">
+                    <div class="text-box">
+                        <h2 style="color: black;">Venue: {{$loc}}</h2>
+                        <h3>{{$date}}</h3>
+                    </div>
                 </div>
+            {{end}}
         {{end}}
     </div>
     <footer>
