--- a/static/style/one-band.css
+++ b/static/style/one-band.css
@@ -12,6 +12,57 @@ body {
     color: black;
 }
 
+section {
+    min-height: 50vh;
+    padding: 10rem 12% 10rem;
+}
+
+.home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+}
+
+.home_content {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    text-align: left;
+    justify-content: center;
+    color: white;
+    margin-top: 3rem;
+}
+
+.home_content span {
+    color: #1f83f2;
+}
+
+.home_content h3 {
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 2.5rem;
+}
+
+.home_content h1 {
+    font-size: 5rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    line-height: 1;
+}
+
+.home_image {
+    border-radius: 50%;
+}
+
+.home_image img {  
+    position: relative;
+    top: 3rem;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px #1f83f2;
+}
+
 .members {
     display: flex;
     justify-content: center;
@@ -54,7 +105,8 @@ body {
     height: 45px;
     background: #1f83f2;
     border-radius: 22.5px;
-    box-shadow: 5px 5px 7px rgba(0,0,0,.25), inset 2px 2px 5px rgba(255, 255, 255, .25), inset -3x -3px 5px rgba(0,0,0,.5);
+    box-shadow: 5px 5px 7px rgba(0,0,0,.25), 5px 5px 7px rgba(0,0,0,.25), inset 5px 5px 10px rgba(255, 255, 255, .2),  inset -5px -5px 15px rgba(0,0,0,.75);
+    transition: 0.5s;
 }
 
 .member-container .list:hover::before {
@@ -65,7 +117,6 @@ body {
     position: relative;
     min-width: 45px;
     height: 45px;
-    /* background: #fff; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,6 +127,7 @@ body {
 .member-container .list .rank::before {
     content: '';
     position: absolute;
+    top: 7px;
     width: 30px;
     height: 30px;
     background: #081b29;
@@ -131,7 +183,7 @@ body {
     left: -20px;
 }
 
-.timeline::after {
+/* .timeline::after {
     content: '';
     position: absolute;
     width: 6px;
@@ -141,4 +193,27 @@ body {
     left: 50%;
     margin-left: -3px;
     z-index: -1;
+} */
+
+.member-container .list .one_member {
+    position: relative;
+    line-height: 1.15em;
+}
+
+.member-container .list .one_member h4 {
+    font-weight: 600;
+    color: #d1d1db;
+    transition: .5s;
+}
+
+.member-container .list .one_member p {
+    font-weight: 400;
+    color: #d5dbe0;
+    font-size: 0.85em;
+    transition: 0.5s;
+}
+
+.member-container .list:hover .one_member h4,
+.member-container .list:hover .one_member p {
+    color: #fff;
 }
