--- a/static/style/one-band.css
+++ b/static/style/one-band.css
@@ -13,15 +13,16 @@ body {
 }
 
 section {
-    min-height: 50vh;
-    padding: 10rem 12% 10rem;
+    min-height: 30vh;
+    padding: 6rem 8% 6rem;
 }
 
 .home {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15rem;
+    gap: 5rem;
 }
 
 .home_content {
@@ -39,13 +40,13 @@ section {
 }
 
 .home_content h3 {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     margin-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .home_content h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 700;
     margin-top: 1.5rem;
     line-height: 1;
@@ -59,6 +60,7 @@ section {
     position: relative;
     top: 3rem;
     width: 32vw;
+    min-width: 400px;
     border-radius: 50%;
     box-shadow: 0 0 25px #1f83f2;
 }
@@ -216,4 +218,24 @@ section {
 .member-container .list:hover .one_member h4,
 .member-container .list:hover .one_member p {
     color: #fff;
+}
+
+@media (max-width: 895px) {
+    .home {
+        flex-direction: column-reverse;
+        margin: 3rem 2rem;
+    }
+    .home_content {
+        text-align: center;
+    }
+    .home-content_h3 {
+        font-size: 2rem;
+    }
+    .home_image {
+        min-width: 400px;
+    }
+    .home_image img {
+        min-width: 400px;
+    }
+    
 }
