--- a/templates/band.html
+++ b/templates/band.html
@@ -7,64 +7,75 @@
     <link rel="stylesheet" href="../static/style/one-band.css">
 </head>
 <body>
-    <h3 style="color: white;">About {{.Band.Artist.Name}}</h3>
-    <section class="home" id="home">
-        <div class="home_content">
-            <h1>Welcome to the <span>{{.Band.Artist.Name}}</span> Experience</h1>
-            <h3 class="text_animation">Our first Album was produced in {{.Band.Artist.FirstAlbum}}</h3>
-        </div>
-        <div class="home_image">
-            <img src="{{.Band.Artist.Image}}" alt="">
-        </div>
-    </section>
-    <!-- Members -->
-    <div class="members">
-        
-        <div class="member-container">
-            <h3>{{.Band.Artist.Name}} Band Members</h3>
-            {{range $index, $mem := .Band.Artist.Members}}
-            <div class="list">
-                <div class="rank"><span>{{$index}}</span></div>
-                <div class="one_member">
-                    <h4>{{$mem}}</h4>
-                    <p>Joined the band in {{$.Band.Artist.CreationDate}}</p>
-                </div>
+    <div class="wrapper">
+        <h3 style="color: white;">About {{.Band.Artist.Name}}</h3>
+        <section class="home" id="home">
+            <div class="home_content">
+                <h1>Welcome to the <span>{{.Band.Artist.Name}}</span> Experience</h1>
+                <h3 class="text_animation">Our first Album was produced in {{.Band.Artist.FirstAlbum}}</h3>
             </div>
-            {{end}}
-        </div>
-        
-    </div>
-    <h3 style="color: white;">Venues</h3>
-    <div class="members">
-        
-        <div class="member-container">
-            <h3>{{.Band.Artist.Name}} Venues</h3>
-            {{range $i, $loc := .Band.Location.Location}}
-            <div class="list">
-                <div class="rank"><span>{{$i}}</span></div>
-                <div class="one_member">
-                    <h4>{{$loc}}</h4>
-                </div>
+            <div class="home_image">
+                <img src="{{.Band.Artist.Image}}" alt="">
             </div>
-            {{end}}
-        </div>
-        
-    </div>
-    <!-- Locations -->
-    <h3 style="color: white;">Relation</h3>
-    <div class="timeline">
-        {{range $loc, $dates := .Band.Relation.DateLocs}}
-            {{range $date := $dates}}       
-                <div class="timeline-container left-box">
-                    <img src="{{$.Band.Artist.Image}}" alt="Band logo">
-                    <div class="text-box">
-                        <h2 style="color: black;">Venue: {{$loc}}</h2>
-                        <h3>{{$date}}</h3>
+        </section>
+        <!-- Members -->
+        <div class="content-wrapper">
+            <aside class="sidebar">
+                <div class="members">
+            
+                    <div class="member-container">
+                        <h3>{{.Band.Artist.Name}} Band Members</h3>
+                        {{range $index, $mem := .Band.Artist.Members}}
+                        <div class="list">
+                            <div class="rank"><span>{{$index}}</span></div>
+                            <div class="one_member">
+                                <h4>{{$mem}}</h4>
+                                <p>Joined the band in {{$.Band.Artist.CreationDate}}</p>
+                            </div>
+                        </div>
+                        {{end}}
                     </div>
+                    
                 </div>
-            {{end}}
-        {{end}}
+            </aside>
+            <main class="main-content">
+                <div class="venues">
+                    
+                    <div class="member-container">
+                        <h3>{{.Band.Artist.Name}} Venues</h3>
+                        {{range $i, $loc := .Band.Location.Location}}
+                        <div class="list">
+                            <div class="rank"><span>{{$i}}</span></div>
+                            <div class="one_member">
+                                <h4>{{$loc}}</h4>
+                            </div>
+                        </div>
+                        {{end}}
+                    </div>
+                    
+                </div>
+                <!-- Locations -->
+                <h3 style="color: white;">Relation</h3>
+                <div class="timeline">
+                    {{range $loc, $dates := .Band.Relation.DateLocs}}
+                        {{range $date := $dates}}       
+                            <div class="timeline-container left-box">
+                                <img src="{{$.Band.Artist.Image}}" alt="Band logo">
+                                <div class="text-box">
+                                    <h2 style="color: black;">Venue: {{$loc}}</h2>
+                                    <h3>{{$date}}</h3>
+                                </div>
+                            </div>
+                        {{end}}
+                    {{end}}
+                </div>
+            </main>
+            
+            
+        </div>
+        
     </div>
+    
     <footer>
         <div>
             <p>&copy; 2024 Groupie Tracker. All rights reserved.</p>
