--- a/static/style/one-band.css
+++ b/static/style/one-band.css
@@ -17,6 +17,24 @@ section {
     padding: 6rem 8% 6rem;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+.content-wrapper {
+    display: flex;
+    min-height: 100vh;
+}
+
+.sidebar {
+    width: 500px;
+    padding: 20px;
+}
+
+.main-content {
+    flex: 1;
+    padding: 20px;
+}
 .home {
     display: flex;
     flex-direction: row;
@@ -65,18 +83,18 @@ section {
     box-shadow: 0 0 25px #1f83f2;
 }
 
-.members {
+.members, .venues {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: auto;
     background: #081b29;
 }
 
 .member-container {
     position: relative;
-    width: 400px;
-    min-height: 500px;
+    width: 100%;
+    min-height: auto;
     border-radius: 35px;
     padding: 50px;
     background: #081b29;
@@ -87,7 +105,6 @@ section {
     color: #fff;
     font-weight: 700;
     font-size: 1.2em;
-
 }
 
 .member-container .list {
@@ -154,6 +171,10 @@ section {
     padding: 10px 50px;
     position: relative;
     width: 50%;
+}
+
+.venues, .timeline-container {
+    margin-bottom: 40px;
 }
 
 .text-box {
