--- a/templates/band.html
+++ b/templates/band.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.Band.Artist.Name}}</title>
     <link rel="stylesheet" href="../static/style/one-band.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="wrapper">
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="/static/images/Mic Sticker by lord-sativa.jpeg" alt="logo" class="logo">
+            </div>
+            <h1>Artists</h1>
+            <nav>
+                <a href="/" action="/" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-home"></i>Home</a>
+                <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a>
+                <a href="/about" action="/about" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-info" style="size: small;"></i>About Us</a>
+            </nav>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="search ...">
+                <button type="button" id="search-btn">search</button>
+                <div id="suggestions" class="suggestions"></div>
+            </div>
+        </div>
+        
+    </header><br>
+    <div class="artist-wrapper">
         <h3 style="color: white;">About {{.Band.Artist.Name}}</h3>
         <section class="home" id="home">
             <div class="home_content">
@@ -30,7 +50,7 @@
                             <div class="rank"><span>{{$index}}</span></div>
                             <div class="one_member">
                                 <h4>{{$mem}}</h4>
-                                <p>Joined the band in {{$.Band.Artist.CreationDate}}</p>
+                                <!-- <p>Joined the band in {{$.Band.Artist.CreationDate}}</p> -->
                             </div>
                         </div>
                         {{end}}
@@ -40,34 +60,22 @@
             </aside>
             <main class="main-content">
                 <div class="venues">
-                    
-                    <div class="member-container">
-                        <h3>{{.Band.Artist.Name}} Venues</h3>
-                        {{range $i, $loc := .Band.Location.Location}}
-                        <div class="list">
-                            <div class="rank"><span>{{$i}}</span></div>
-                            <div class="one_member">
-                                <h4>{{$loc}}</h4>
-                            </div>
-                        </div>
+                    <div class="member-container venue-container">
+                        <h3>{{.Band.Artist.Name}} Venues and Dates</h3>
+                        {{range $loc, $dates := .Band.Relation.DateLocs}}
+                            {{range $date := $dates}} 
+                                <div class="list v-list">
+                                    <div class="rank v-rank"><span><i class='bx bx-map-pin'></i></span></div>
+                                    <div class= "one_member v-one">
+                                        <h3>City: {{$loc}}</h3>
+                                        <h4>Date: {{$date}}</h4>
+                                       
+                                    </div>
+                                </div>      
+                            {{end}}
                         {{end}}
                     </div>
-                    
-                </div>
-                <!-- Locations -->
-                <h3 style="color: white;">Relation</h3>
-                <div class="timeline">
-                    {{range $loc, $dates := .Band.Relation.DateLocs}}
-                        {{range $date := $dates}}       
-                            <div class="timeline-container left-box">
-                                <img src="{{$.Band.Artist.Image}}" alt="Band logo">
-                                <div class="text-box">
-                                    <h2 style="color: black;">Venue: {{$loc}}</h2>
-                                    <h3>{{$date}}</h3>
-                                </div>
-                            </div>
-                        {{end}}
-                    {{end}}
+
                 </div>
             </main>
             
@@ -77,7 +85,7 @@
     </div>
     
     <footer>
-        <div>
+        <div class="footer-container">
             <p>&copy; 2024 Groupie Tracker. All rights reserved.</p>
         </div>
     </footer>
