--- a/static/style/one-band.css
+++ b/static/style/one-band.css
@@ -1,38 +1,223 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
+:root {
+
+    /* background: #FEFAE0;
+      hover: #606C38;
+      navbar: #283618;
+      buttons; #DDA15E;
+      #BC6C25
+      image {
+      display: block;
+      max-width: 100%;
+    */
+    --font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    --fs-300: Clamp(0.94rem, calc(0.92rem + 0.08vw));
+    --fs-400: Clamp(0.94rem, calc(0.92rem + 0.07vw));
+    --fs-500: Clamp(0.94rem, calc(0.92rem + 0.06vw));
+    --fs-600: Clamp(0.94rem, calc(0.92rem + 0.05vw));
+    --fs-700: Clamp(0.94rem, calc(0.92rem + 0.04vw));
+    --fs-800: Clamp(0.94rem, calc(0.92rem + 0.03vw));
+    --fs-900: Clamp(0.94rem, calc(0.92rem + 0.02vw));
+  
+    --primary-color:hsl(353, 69%, 43%);
+    /* --primary-color:#2c3e50; */
+    --clr-primary-700:hsl(200, 89%, 15%);
+    --clr-primary-600:hsl(200, 89%, 20%);
+    --clr-primary-500:hsl(200, 89%, 35%);
+    --clr-primary-400:hsl(200, 89%, 55%);
+    --clr-primary-300:hsl(200, 89%, 67%);
+    --clr-primary-200:hsl(200, 89%, 80%);
+  
+    --secondary-color:hsl(228, 57%, 0%);
+    /* --secondary-color:#955656; */
+    /* --secondary-color:#384849; */
+    --clr-secondary-700:hsl(144, 62%, 5%);
+    --clr-secondary-600:hsl(114, 65%, 15%);
+    --clr-secondary-500:hsl(114, 55%, 25%);
+    --clr-secondary-400:hsl(114, 45%, 35%);
+    --clr-secondary-300:hsl(114, 35%, 45%);
+    --clr-secondary-200:hsl(114, 25%, 55%);
+  
+    --accent-color:hsl(32, 98%, 50%);
+    /* --accent-color: #f39c12; */
+    --clr-accent-700:hsl(49, 75%, 54%);
+    --clr-accent-600:hsl(33, 75%, 47%);
+    --clr-accent-500:hsl(33, 75%, 40%);
+    --clr-accent-400:hsl(33, 75%, 35%);
+    --clr-accent-300:hsl(33, 75%, 30%);
+    --clr-accent-200:hsl(33, 75%, 25%);
+  
+    --accent-color:hsl(28, 81%, 90%);
+    /* --neutral-color: #ecf0f1; */
+    --clr-neutral-700:hsl(182, 75%, 35%);
+    --clr-neutral-600:hsl(182, 75%, 45%);
+    --clr-neutral-500:hsl(182, 75%, 55%);
+    --clr-neutral-400:hsl(182, 75%, 65%);
+    --clr-neutral-300:hsl(182, 75%, 75%);
+    --clr-neutral-200:hsl(182, 75%, 85%);
+  
+    --text-color:#34495e;
+    --clr-text-700:hsl(194, 51%, 49%);
+    --clr-text-600:hsl(194, 47%, 45%);
+    --clr-text-500:hsl(194, 40%, 40%);
+    --clr-text-400:hsl(194, 30%, 37%);
+    --clr-text-300:hsl(194, 15%, 32%);
+    --clr-text-200:hsl(194, 9%, 27%);
+  }
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
 }
 
 body {
-    background-color: #081b29;
-    color: black;
+    font-family: var(--font-family);
+    margin: 0;
+    padding: 0;
+    text-size-adjust: var(--fs-500);
+    color: var(--clr-text-200);
+    text-decoration: none;
+    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    z-index: 1000;
+    margin-bottom: 60px;
+}
+/* Navigation */
+header, main, footer {
+    display: block;
 }
 
-section {
-    min-height: 30vh;
-    padding: 6rem 8% 6rem;
+header {
+    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    color: #cfa77a;
+    padding: 1rem 0;
+    position: fixed;
+    border-bottom: 1px solid #e1e4e8;
+    padding: 20px 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-width: 300px;
+  margin-inline: auto;
+}
+
+.container {
+    max-width: 1200px;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    background:var(--clr-primary-600);
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .logo {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+  }
+  
+  .logo img{
+      height: 40px;
+      border-radius: 50%;
+  }
+  
+  nav {
+      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+      display: flex;
+      align-items: center;
+      border-radius: 8px;
+      padding: 10px 20px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin: 0 auto; /* Center the nav */
+  }
+  
+  nav a {
+    color: white;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    margin: 0 15px;
+    transition: color 0.3s ease;
+  }
+  
+  nav a:hover {
+      color: var(--clr-primary-400);
+      text-decoration: underline;
+  }
+  
+  .search-container {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+      border-radius: 20% 20% 20% 20% auto;
+  }
+  
+  .search-container button {
+    background-color: #cfa77a;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 10px;
+  }
+  
+  .search-container button:hover {
+      background-color: rgb(78, 147, 211);
+  }
+  
+  .search-container input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid var(--primary-color);
+    border-radius: 10px 10px 10px  10px;
+    outline: none;
+  }
+
+/* Body */
+.artist-wrapper {
     display: flex;
     flex-direction: column;
 }
+
+section {
+    min-height: 20vh;
+    max-width: 1500px;
+    padding: 2rem 8% 2rem;
+    margin: 20px auto;
+}
+
 .content-wrapper {
     display: flex;
-    min-height: 100vh;
+    min-height: 30vh;
 }
 
 .sidebar {
-    width: 500px;
+    flex: 1;
+    max-width: 500px;
+    min-width: 300px;
     padding: 20px;
 }
 
 .main-content {
     flex: 1;
+    min-width: 500px;
     padding: 20px;
 }
 .home {
@@ -60,13 +245,13 @@ section {
 .home_content h3 {
     margin-bottom: 1.5rem;
     margin-top: 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .home_content h1 {
     font-size: 4rem;
     font-weight: 700;
-    margin-top: 1.5rem;
+    margin-top: 1.2rem;
     line-height: 1;
 }
 
@@ -77,10 +262,10 @@ section {
 .home_image img {  
     position: relative;
     top: 3rem;
-    width: 32vw;
-    min-width: 400px;
+    max-width: 500px;
+    min-width: 300px;
     border-radius: 50%;
-    box-shadow: 0 0 25px #1f83f2;
+    box-shadow: 0 0 25px hsl(353, 100%, 75%);
 }
 
 .members, .venues {
@@ -97,7 +282,7 @@ section {
     min-height: auto;
     border-radius: 35px;
     padding: 50px;
-    background: #081b29;
+    background: hsl(353, 40%, 40%);
     box-shadow: 25px 25px 75px rgba(0,0,0,.25), 10px 10px 70px rgba(0,0,0,.25), inset 5px 5px 10px rgba(255, 255, 255, .2),  inset -5px -5px 15px rgba(0,0,0,.75);
 }
 
@@ -128,6 +313,10 @@ section {
     transition: 0.5s;
 }
 
+.member-container .v-list::before {
+    height: 60px;   
+}
+
 .member-container .list:hover::before {
     width: 100%;
 }
@@ -155,6 +344,18 @@ section {
     transition: 0.5s;
 }
 
+.member-container .v-list .v-rank::before {
+    content: '';
+    position: absolute;
+    top: 13px;
+    width: 30px;
+    height: 30px;
+    background: #081b29;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 0.5s;
+}
+
 .member-container .list:hover .rank::before {
     transform: scale(1);
 }
@@ -167,56 +368,9 @@ section {
     transition: 0.5s;
 }
 
-.timeline-container {
-    padding: 10px 50px;
-    position: relative;
-    width: 50%;
+.member-container .v-list .v-rank span {
+    margin-top: 10px;
 }
-
-.venues, .timeline-container {
-    margin-bottom: 40px;
-}
-
-.text-box {
-    padding: 20px 30px;
-    background-color: #fff;
-    position: relative;
-    border-radius: 5px;
-    font-size: 15px;
-}
-
-.left-box {
-    left: 0;
-}
-.right-box {
-    left: 50%;
-}
-
-.timeline-container img {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    right: -20px;
-    top: 60px;
-    z-index: 10;
-}
-
-.right-box img {
-    left: -20px;
-}
-
-/* .timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 100%;
-    background-color: #fff;
-    top: 0;
-    left: 50%;
-    margin-left: -3px;
-    z-index: -1;
-} */
 
 .member-container .list .one_member {
     position: relative;
@@ -227,6 +381,11 @@ section {
     font-weight: 600;
     color: #d1d1db;
     transition: .5s;
+}
+
+.member-container .v-list .v-one h3 {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .member-container .list .one_member p {
@@ -241,10 +400,31 @@ section {
     color: #fff;
 }
 
-@media (max-width: 895px) {
+/* Footer */
+footer {
+    position: fixed;
+    bottom: 0;
+    background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+    color: var(--neutral-color);
+    text-align: center;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 20px 20px 0 0; /* Rounded top corners */
+    z-index: 1000; /* Ensure footer is on top */
+  }
+  
+  .footer-container {
+    display: grid;
+    place-items: center;
+  }
+
+@media (max-width: 768px) {
     .home {
         flex-direction: column-reverse;
-        margin: 3rem 2rem;
+        margin: 2rem 1.2rem;
     }
     .home_content {
         text-align: center;
@@ -258,5 +438,11 @@ section {
     .home_image img {
         min-width: 400px;
     }
-    
+    .content-wrapper {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+    }
 }
