refactor: refactor navbar in HTML templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="/" action="/" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-home"></i>Home</a>
                 <a href="/artists" action="/artists" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-headset"></i>Artists</a>
-                <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a>
+                <!-- <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a> -->
             </nav>
         </div>
         
@@ -56,8 +56,6 @@
         </div>
       </div>
     </main>
-
-    <hr>
     
     <section class="persons">
       <div id="cynthia-details" class="about-card">
