--- a/templates/index.html
+++ b/templates/index.html
@@ -37,29 +37,33 @@
     <hr>
 
     <section id="features" class="features">
-        <div class="feature fade-in-up">
+      <div class="feature fade-in-up">
+        <a href="/artists" class="feature-link">
             <i class="fas fa-users"></i>
             <h3>Artists</h3>
-            <a href="/artists" action="/artists" method="get"></a>
             <p>Connect directly with your beloved artists on their tours</p>
             <div id="artists-list" class="cards-container"></div>
-        </div>
-
-        <div class="feature fade-in-up">
+        </a>
+    </div>
+    
+    <div class="feature fade-in-up">
+        <a href="/artists" class="feature-link">
             <i class="fas fa-microphone"></i>
             <h3>Concerts</h3>
-            <a href="/concerts" action="/concerts" method="get"></a>
-            <p>Connect directly with your beloved artists on their tours</p>
+            <p>Find concerts and join the excitement</p>
             <div id="concerts-list" class="cards-container"></div>
-        </div>
-
-        <div class="feature fade-in-up">
+        </a>
+    </div>
+    
+    <div class="feature fade-in-up">
+        <a href="/artists" class="feature-link">
             <i class="fas fa-globe-africa"></i>
             <h3>Locations</h3>
-            <a href="/locations" action="/locations" method="get"></a>
             <p>Sign up for a surreal experience</p>
             <div id="locations-list" class="cards-container"></div>
-        </div>
+        </a>
+    </div>
+    
     </section>
         <hr>
         
