update info in about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
             <img src="/static/images/cache_m_IMG_6933.jpg" alt="image" class="card__img">
             <div class="card__data">
               <span class="card__description">Cynthia</span>
-              <h2 class="card__title">The Great Developer</h2>
+              <h2 class="card__title">Full Stack Developer</h2>
               <a href="#cynthia-details" class="card__button">Read More</a>
             </div>
           </article>
