refactor: remove search from band page

--- a/templates/band.html
+++ b/templates/band.html
@@ -19,11 +19,11 @@
                 <!-- <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a> -->
                 <a href="/about" action="/about" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-info" style="size: small;"></i>About Us</a>
             </nav>
-            <div class="search-container">
+            <!-- <div class="search-container">
                 <input type="text" id="search-input" placeholder="search ...">
                 <button type="button" id="search-btn">search</button>
                 <div id="suggestions" class="suggestions"></div>
-            </div>
+            </div> -->
         </div>
         
     </header><br>
