feat: make logo clickable

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,13 +12,15 @@
   <body>
     <header>
         <div class="header-container">
-          <div class="logo">
-            <img src="/static/images/Mic Sticker by lord-sativa.jpeg" alt="logo" class="logo">
-          </div>
+          <a style="margin-right: 20px;" href="/">
+              <div class="logo">
+                  <img src="/static/images/Mic Sticker by lord-sativa.jpeg" alt="logo" class="logo">
+              </div>
+          </a>
             <h1>About Us</h1>
             <nav>
                 <a href="/" action="/" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-home"></i>Home</a>
-                <a href="/artists" action="/artists" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-headset"></i>Artists</a>
+                <!-- <a href="/artists" action="/artists" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-headset"></i>Artists</a> -->
                 <!-- <a href="/concerts" action="/concerts" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-microphone"></i>Concerts</a> -->
             </nav>
         </div>
