--- a/templates/band.html
+++ b/templates/band.html
@@ -10,9 +10,11 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="/static/images/Mic Sticker by lord-sativa.jpeg" alt="logo" class="logo">
-            </div>
+            <a style="margin-right: 20px;" href="/">
+                <div class="logo">
+                    <img src="/static/images/Mic Sticker by lord-sativa.jpeg" alt="logo" class="logo">
+                </div>
+            </a>
             <h1>Artists</h1>
             <nav>
                 <a href="/" action="/" method="get" class="cta-button fade-in-up"><i class="fa fa-fw fa-home"></i>Home</a>
